2014-03-21  Vanessa Gil <vanessa.gil@artica.es>

	* include/integria_cron.php: Fixed bug validating
	emails.

2014-03-21  Vanessa Gil <vanessa.gil@artica.es>

	* operation/incidents/incident_files.php: Added field 'user' to 
	upload files.
	  
	* operation/projects/task_workunit.php: Fixed massive edition.

	* operation/users/user_workunit_report.php: Added massive edition.

2014-03-07  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* operation/download/browse.php,
	  operation/download/manage_types.php: Error fixes.

	* include/functions_file_releases.php,
	  include/functions_db.php: Changes on the functions
	"get_file_types", "print_file_types_table" and
	"get_filter_by_fr_category_accessibility".
	
2014-03-07  Sancho Lerena <slerena@artica.es>

	* operation/download/manage_types.php: Fixed creation
	of FileRelease types, if list is empty, button for
	creation is not shown.

2014-03-05  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* extras/mr/7.sql: Added file. New MR5.

	* extras/incidents_old_sla_table_importer.php: Script
	to fill the new table "tincident_sla_graph_data" with
	the data of the deprecated table "tincident_sla_graph".

	* integria_db.sql: Replaced the "tincident_sla_graph"
	for the table "tincident_sla_graph_data".

	* integria_demo.sql: Deleted a reference to the table
	"tincident_sla_graph".

	* include/functions_graph.php,
	  include/functions_db.php: Modified the functions
	"graph_incident_statistics_sla_compliance",
	"graph_incident_sla_compliance", "get_sla_compliance"
	and "graph_sla_slicebar" to use the new ways to get
	the incidents sla data.

	* include/functions_incidents.php: Added the functions
	"incidents_get_incident_sla_graph_seconds" and
	"incidents_get_sla_graph_seconds". Minor fixes.

	* include/integria_cron.php: Now the function "graph_sla"
	only inserts new data if the sla value is different than
	the last inserted value.
	Modified the function "delete_old_incidents" to delete